{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 96,
  "lineage": "404343e8-9637-5313-d3b4-9e6cec7ab461",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff4e98011ec08c71",
            "association_id": "eipassoc-08036dcddc9a25fa4",
            "domain": "vpc",
            "id": "eipalloc-0ff4e98011ec08c71",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04920edf70dde5150",
            "private_dns": "ip-10-10-10-173.ec2.internal",
            "private_ip": "10.10.10.173",
            "public_dns": "ec2-34-228-183-56.compute-1.amazonaws.com",
            "public_ip": "34.228.183.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0471013e76e4c7a5d",
            "association_id": "eipassoc-0af37f3dfb1a97837",
            "domain": "vpc",
            "id": "eipalloc-0471013e76e4c7a5d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0efd2366394a782b6",
            "private_dns": "ip-10-10-20-68.ec2.internal",
            "private_ip": "10.10.20.68",
            "public_dns": "ec2-44-196-131-146.compute-1.amazonaws.com",
            "public_ip": "44.196.131.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:internet-gateway/igw-0c5e7975bef1f2b6f",
            "id": "igw-0c5e7975bef1f2b6f",
            "owner_id": "671476986586",
            "tags": {
              "Name": "IGW_VPC1"
            },
            "tags_all": {
              "Name": "IGW_VPC1"
            },
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "three_tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "arn_suffix": "app/three-tier-loadbalancer-1/5d27212cf0405888",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-three-tier-loadbalancer-1-1287788571.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "idle_timeout": 400,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-loadbalancer-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfd4e95ceb943f38"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ad1891b31cf76f5"
              },
              {
                "subnet_id": "subnet-0c75e41250ce663a3"
              }
            ],
            "subnets": [
              "subnet-00ad1891b31cf76f5",
              "subnet-0c75e41250ce663a3"
            ],
            "vpc_id": "vpc-0ea1b311c5b9ef381",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "arn_suffix": "app/three-tier-loadbalancer-2/07b594f7780fe219",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-three-tier-loadbalancer-2-1552426474.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "idle_timeout": 400,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-loadbalancer-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfd4e95ceb943f38"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ad1891b31cf76f5"
              },
              {
                "subnet_id": "subnet-0c75e41250ce663a3"
              }
            ],
            "subnets": [
              "subnet-00ad1891b31cf76f5",
              "subnet-0c75e41250ce663a3"
            ],
            "vpc_id": "vpc-0ea1b311c5b9ef381",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three_tier_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/c686d34191611739",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-54c-1/7f87b74bf46e9dea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/c686d34191611739",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/c5201e3449a763d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7c3-2/1c0719560cbf6012",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/c5201e3449a763d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 81,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/14438a371f43e70c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-88d-3/a6918b3c59deb72f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/14438a371f43e70c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 82,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/602e37390bca7614",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-674-4/ca77fb8a041ebd4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/602e37390bca7614",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 83,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/676df9c997f89b66",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-367-5/58e04bcfa17046ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/676df9c997f89b66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 84,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/206e0cb0eb10fc0f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-50f-6/687857413e8c3c29",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/206e0cb0eb10fc0f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 85,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/b8ccbb3b6e3abf03",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-424-7/ba56a6b224af2770",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/b8ccbb3b6e3abf03",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 86,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/3fa9e05bd81f64a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-e8d-8/f20376d4239c7228",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/3fa9e05bd81f64a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 87,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/f5aad10843ddaa95",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-552-9/9aeeeb0a0bcac003",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/f5aad10843ddaa95",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 88,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/1cb04c520d8c53c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5bc-10/11e1e95c3e58f295",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/1cb04c520d8c53c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 89,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/02b18da5577a1262",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-535-11/2aa63d56a116ba36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/02b18da5577a1262",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 90,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/4265ae0baac4edd5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-277-12/04fffec6a5f19839",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/4265ae0baac4edd5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 91,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/aa8145e9d4faf1f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-3aa-13/a9ee63c7a391baaa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/aa8145e9d4faf1f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 92,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/0a8a097c3d4b86a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-2bc-14/44eee7b521e0ec71",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/0a8a097c3d4b86a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 93,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/d5ab45c321511793",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-ed7-15/27a18bd9ab7a9c52",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/d5ab45c321511793",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 94,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/ac3068797762e353",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c9a-16/04e3f7fd34d4d222",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/ac3068797762e353",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 95,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/275cae087142690f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-9a4-17/131f0bac404129fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/275cae087142690f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 96,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/beed4a00ea6f624d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-73d-18/adf9d66737357e89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/beed4a00ea6f624d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 97,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/b81b822eb7128e4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5a3-19/0b80571e06e40f48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/b81b822eb7128e4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 98,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/d1892166c623322b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7de-20/e3ad02b852349184",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/d1892166c623322b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 99,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/e6bb83f08b03f7be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-d28-21/6f4ce7563b1c155e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/e6bb83f08b03f7be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 100,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/a103e0b694a01bbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c8b-22/46fc8304090bf3f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/a103e0b694a01bbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 101,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/3e761611d96a72a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-433-23/615564b3cc7ba679",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/3e761611d96a72a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 102,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/df063365f69f2b9e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-b18-24/5f15899137910e2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-2/07b594f7780fe219/df063365f69f2b9e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-2/07b594f7780fe219",
            "port": 103,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/f6b6d7c8e1bc0ebd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-496-25/3924d147f5cf9eca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:listener/app/three-tier-loadbalancer-1/5d27212cf0405888/f6b6d7c8e1bc0ebd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:loadbalancer/app/three-tier-loadbalancer-1/5d27212cf0405888",
            "port": 104,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.three_tier_lb",
            "module.network.aws_lb_target_group.three_tier_tg",
            "module.network.aws_security_group.tree_tire_lb_sg",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three_tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-54c-1/7f87b74bf46e9dea",
            "arn_suffix": "targetgroup/three-tier-lb-tg-54c-1/7f87b74bf46e9dea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-54c-1/7f87b74bf46e9dea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-54c-1",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7c3-2/1c0719560cbf6012",
            "arn_suffix": "targetgroup/three-tier-lb-tg-7c3-2/1c0719560cbf6012",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7c3-2/1c0719560cbf6012",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-7c3-2",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-88d-3/a6918b3c59deb72f",
            "arn_suffix": "targetgroup/three-tier-lb-tg-88d-3/a6918b3c59deb72f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-88d-3/a6918b3c59deb72f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-88d-3",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-674-4/ca77fb8a041ebd4d",
            "arn_suffix": "targetgroup/three-tier-lb-tg-674-4/ca77fb8a041ebd4d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-674-4/ca77fb8a041ebd4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-674-4",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-367-5/58e04bcfa17046ca",
            "arn_suffix": "targetgroup/three-tier-lb-tg-367-5/58e04bcfa17046ca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-367-5/58e04bcfa17046ca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-367-5",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-50f-6/687857413e8c3c29",
            "arn_suffix": "targetgroup/three-tier-lb-tg-50f-6/687857413e8c3c29",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-50f-6/687857413e8c3c29",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-50f-6",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-424-7/ba56a6b224af2770",
            "arn_suffix": "targetgroup/three-tier-lb-tg-424-7/ba56a6b224af2770",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-424-7/ba56a6b224af2770",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-424-7",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-e8d-8/f20376d4239c7228",
            "arn_suffix": "targetgroup/three-tier-lb-tg-e8d-8/f20376d4239c7228",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-e8d-8/f20376d4239c7228",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-e8d-8",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-552-9/9aeeeb0a0bcac003",
            "arn_suffix": "targetgroup/three-tier-lb-tg-552-9/9aeeeb0a0bcac003",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-552-9/9aeeeb0a0bcac003",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-552-9",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5bc-10/11e1e95c3e58f295",
            "arn_suffix": "targetgroup/three-tier-lb-tg-5bc-10/11e1e95c3e58f295",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5bc-10/11e1e95c3e58f295",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-5bc-10",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-535-11/2aa63d56a116ba36",
            "arn_suffix": "targetgroup/three-tier-lb-tg-535-11/2aa63d56a116ba36",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-535-11/2aa63d56a116ba36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-535-11",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-277-12/04fffec6a5f19839",
            "arn_suffix": "targetgroup/three-tier-lb-tg-277-12/04fffec6a5f19839",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-277-12/04fffec6a5f19839",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-277-12",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-3aa-13/a9ee63c7a391baaa",
            "arn_suffix": "targetgroup/three-tier-lb-tg-3aa-13/a9ee63c7a391baaa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-3aa-13/a9ee63c7a391baaa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-3aa-13",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-2bc-14/44eee7b521e0ec71",
            "arn_suffix": "targetgroup/three-tier-lb-tg-2bc-14/44eee7b521e0ec71",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-2bc-14/44eee7b521e0ec71",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-2bc-14",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-ed7-15/27a18bd9ab7a9c52",
            "arn_suffix": "targetgroup/three-tier-lb-tg-ed7-15/27a18bd9ab7a9c52",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-ed7-15/27a18bd9ab7a9c52",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-ed7-15",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c9a-16/04e3f7fd34d4d222",
            "arn_suffix": "targetgroup/three-tier-lb-tg-c9a-16/04e3f7fd34d4d222",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c9a-16/04e3f7fd34d4d222",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-c9a-16",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-9a4-17/131f0bac404129fc",
            "arn_suffix": "targetgroup/three-tier-lb-tg-9a4-17/131f0bac404129fc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-9a4-17/131f0bac404129fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-9a4-17",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-73d-18/adf9d66737357e89",
            "arn_suffix": "targetgroup/three-tier-lb-tg-73d-18/adf9d66737357e89",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-73d-18/adf9d66737357e89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-73d-18",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5a3-19/0b80571e06e40f48",
            "arn_suffix": "targetgroup/three-tier-lb-tg-5a3-19/0b80571e06e40f48",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-5a3-19/0b80571e06e40f48",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-5a3-19",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7de-20/e3ad02b852349184",
            "arn_suffix": "targetgroup/three-tier-lb-tg-7de-20/e3ad02b852349184",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-7de-20/e3ad02b852349184",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-7de-20",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-d28-21/6f4ce7563b1c155e",
            "arn_suffix": "targetgroup/three-tier-lb-tg-d28-21/6f4ce7563b1c155e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-d28-21/6f4ce7563b1c155e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-d28-21",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c8b-22/46fc8304090bf3f8",
            "arn_suffix": "targetgroup/three-tier-lb-tg-c8b-22/46fc8304090bf3f8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-c8b-22/46fc8304090bf3f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-c8b-22",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-433-23/615564b3cc7ba679",
            "arn_suffix": "targetgroup/three-tier-lb-tg-433-23/615564b3cc7ba679",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-433-23/615564b3cc7ba679",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-433-23",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-b18-24/5f15899137910e2e",
            "arn_suffix": "targetgroup/three-tier-lb-tg-b18-24/5f15899137910e2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-b18-24/5f15899137910e2e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-b18-24",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-496-25/3924d147f5cf9eca",
            "arn_suffix": "targetgroup/three-tier-lb-tg-496-25/3924d147f5cf9eca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:671476986586:targetgroup/three-tier-lb-tg-496-25/3924d147f5cf9eca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-lb-tg-496-25",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff4e98011ec08c71",
            "association_id": "eipassoc-08036dcddc9a25fa4",
            "connectivity_type": "public",
            "id": "nat-0b3378c9682ac8bbe",
            "network_interface_id": "eni-04920edf70dde5150",
            "private_ip": "10.10.10.173",
            "public_ip": "34.228.183.56",
            "subnet_id": "subnet-00ad1891b31cf76f5",
            "tags": {
              "Company_Name": "Carrectly",
              "Name": "stage-nat1",
              "Owner": "Pavlo H"
            },
            "tags_all": {
              "Company_Name": "Carrectly",
              "Name": "stage-nat1",
              "Owner": "Pavlo H"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat1",
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0471013e76e4c7a5d",
            "association_id": "eipassoc-0af37f3dfb1a97837",
            "connectivity_type": "public",
            "id": "nat-05aa0263c0e7cc079",
            "network_interface_id": "eni-0efd2366394a782b6",
            "private_ip": "10.10.20.68",
            "public_ip": "44.196.131.146",
            "subnet_id": "subnet-0c75e41250ce663a3",
            "tags": {
              "Company_Name": "Carrectly",
              "Name": "stage-nat2",
              "Owner": "Pavlo H"
            },
            "tags_all": {
              "Company_Name": "Carrectly",
              "Name": "stage-nat2",
              "Owner": "Pavlo H"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat2",
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_vpc_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:route-table/rtb-0b9116f3a10949c00",
            "id": "rtb-0b9116f3a10949c00",
            "owner_id": "671476986586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5e7975bef1f2b6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-route-public-subnets"
            },
            "tags_all": {
              "Name": "stage-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_to_nat_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:route-table/rtb-04314d64022dd6c39",
            "id": "rtb-04314d64022dd6c39",
            "owner_id": "671476986586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-04772bcaff9c94bc5"
              }
            ],
            "tags": {
              "Name": "VPC-route-table2-67-1"
            },
            "tags_all": {
              "Name": "VPC-route-table2-67-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc_peering_connection.vpc1_vpc2",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:route-table/rtb-07b02cc52353e630b",
            "id": "rtb-07b02cc52353e630b",
            "owner_id": "671476986586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-04772bcaff9c94bc5"
              }
            ],
            "tags": {
              "Name": "VPC-route-table2-67-2"
            },
            "tags_all": {
              "Name": "VPC-route-table2-67-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc_peering_connection.vpc1_vpc2",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_to_nat_vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:route-table/rtb-0f013a574c1c7720f",
            "id": "rtb-0f013a574c1c7720f",
            "owner_id": "671476986586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.3.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0cfb2cad6aeed378b"
              }
            ],
            "tags": {
              "Name": "VPC-route-table3-67-1"
            },
            "tags_all": {
              "Name": "VPC-route-table3-67-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b766e9e808a5f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc.vpc3",
            "module.network.aws_vpc_peering_connection.vpc2_vpc3",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52370ed584d5c33",
            "route_table_id": "rtb-0b9116f3a10949c00",
            "subnet_id": "subnet-00ad1891b31cf76f5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_route_table.public_vpc_to_igw",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d5c324177041c8",
            "route_table_id": "rtb-0b9116f3a10949c00",
            "subnet_id": "subnet-0c75e41250ce663a3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_vpc1",
            "module.network.aws_route_table.public_vpc_to_igw",
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_vpc2_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004979da82ec6ca3b",
            "route_table_id": "rtb-04314d64022dd6c39",
            "subnet_id": "subnet-04d2fc07ecb3bd607"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_private_to_nat_vpc2",
            "module.network.aws_subnet.subnet_vpc2",
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc_peering_connection.vpc1_vpc2",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d69d785590f3b8d",
            "route_table_id": "rtb-07b02cc52353e630b",
            "subnet_id": "subnet-0b5b4f1f74ebd18f4"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_private_to_nat_vpc2",
            "module.network.aws_subnet.subnet_vpc2",
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc_peering_connection.vpc1_vpc2",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_vpc3_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073338d538f06bcad",
            "route_table_id": "rtb-0f013a574c1c7720f",
            "subnet_id": "subnet-0b3b0e77fb8cfc5e9"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table_private_to_nat_vpc3",
            "module.network.aws_subnet.subnet_vpc3",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc.vpc3",
            "module.network.aws_vpc_peering_connection.vpc2_vpc3",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tree_tire_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:security-group/sg-0dfd4e95ceb943f38",
            "description": "Allow HTTP and HTTPS Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfd4e95ceb943f38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "three_tier_lb_sg",
            "name_prefix": "",
            "owner_id": "671476986586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc1-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:security-group/sg-0e15102462b58345c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e15102462b58345c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebSG",
            "name_prefix": "",
            "owner_id": "671476986586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Front-End"
            },
            "tags_all": {
              "Name": "Web_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Front-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc2-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:security-group/sg-06e9b1f34aa11113c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e9b1f34aa11113c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Backend-SG",
            "name_prefix": "",
            "owner_id": "671476986586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Backend_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Back-End"
            },
            "tags_all": {
              "Name": "Backend_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Back-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_subnet.subnet_vpc2",
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc3-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:security-group/sg-0381179581d5b9bcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0381179581d5b9bcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Database access to Database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Batabase-SG",
            "name_prefix": "",
            "owner_id": "671476986586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Database-type"
            },
            "tags_all": {
              "Name": "Database_SG",
              "Owner": "Pavlo H",
              "TypeOfProject": "Database-type"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b766e9e808a5f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet_vpc1",
            "module.network.aws_subnet.subnet_vpc2",
            "module.network.aws_subnet.subnet_vpc3",
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc.vpc3",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:subnet/subnet-00ad1891b31cf76f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad1891b31cf76f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "671476986586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "tags_all": {
              "Name": "Subnet1-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:subnet/subnet-0c75e41250ce663a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c75e41250ce663a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "671476986586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1-67-2",
              "env": "test",
              "owner": "Pavlo H"
            },
            "tags_all": {
              "Name": "Subnet1-67-2",
              "env": "test",
              "owner": "Pavlo H"
            },
            "vpc_id": "vpc-0ea1b311c5b9ef381"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:subnet/subnet-04d2fc07ecb3bd607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2fc07ecb3bd607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671476986586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "tags_all": {
              "Name": "Subnet2-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc2",
            "module.network.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:subnet/subnet-0b5b4f1f74ebd18f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5b4f1f74ebd18f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671476986586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2-67-2",
              "env": "test",
              "owner": "Pavlo H"
            },
            "tags_all": {
              "Name": "Subnet2-67-2",
              "env": "test",
              "owner": "Pavlo H"
            },
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc2",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:subnet/subnet-0b3b0e77fb8cfc5e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3b0e77fb8cfc5e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671476986586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet3-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "tags_all": {
              "Name": "Subnet3-67-1",
              "env": "test",
              "owner": "Pavlo H"
            },
            "vpc_id": "vpc-086b766e9e808a5f6"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc3",
            "module.network.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:vpc/vpc-0ea1b311c5b9ef381",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ee5246e1af2f874a",
            "default_route_table_id": "rtb-02fa5d42c0f7542d1",
            "default_security_group_id": "sg-0229a26f9e097637f",
            "dhcp_options_id": "dopt-0c3ba8124a53d2bce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea1b311c5b9ef381",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fa5d42c0f7542d1",
            "owner_id": "671476986586",
            "tags": {
              "Name": "vpc1-public-access-internet",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "public"
            },
            "tags_all": {
              "Name": "vpc1-public-access-internet",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "public"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:vpc/vpc-06eff0e4f196ac2b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05a8d58ee73a46f69",
            "default_route_table_id": "rtb-09634f9db95766d62",
            "default_security_group_id": "sg-0f1a73048b6bffc98",
            "dhcp_options_id": "dopt-0c3ba8124a53d2bce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06eff0e4f196ac2b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09634f9db95766d62",
            "owner_id": "671476986586",
            "tags": {
              "Name": "vpc2-private-web",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "private for backend app"
            },
            "tags_all": {
              "Name": "vpc2-private-web",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "private for backend app"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671476986586:vpc/vpc-086b766e9e808a5f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-075ac9d636dd9dd1a",
            "default_route_table_id": "rtb-00582270648ea75f4",
            "default_security_group_id": "sg-0f81c02000ea4c4d6",
            "dhcp_options_id": "dopt-0c3ba8124a53d2bce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086b766e9e808a5f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00582270648ea75f4",
            "owner_id": "671476986586",
            "tags": {
              "Name": "vpc3-private-db",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "private for db"
            },
            "tags_all": {
              "Name": "vpc3-private-db",
              "env": "test",
              "service": "vpc",
              "type_of_vpc": "private for db"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc1_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-04772bcaff9c94bc5",
            "peer_owner_id": "671476986586",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ea1b311c5b9ef381",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-06eff0e4f196ac2b0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc1",
            "module.network.aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc2_vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0cfb2cad6aeed378b",
            "peer_owner_id": "671476986586",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06eff0e4f196ac2b0",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-086b766e9e808a5f6"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc2",
            "module.network.aws_vpc.vpc3"
          ]
        }
      ]
    }
  ]
}